--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: gcr.io/[PROJECT_ID]/app:v1
+        image: gcr.io/vivek-project-308012/app:v1
         ports:
         - containerPort: 4000
         env:
